--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -12,8 +12,8 @@
     <meta name="description" content="{% block metadescription %}{% endblock %}">
     <title>{% block title %}{% endblock %}</title>
 </head>
-<body>
-    <div class="container border-dark">
+<body style="background-image: url('static/images/banner.webp');">
+    <div class="container bg-white">
         <div class="container-fluid mb-1 navbar-expand-lg navbar-nav my_top_navbar_div">
             {% include 'top-navbar.html' %}
         </div>
