--- a/shop/templates/footer.html
+++ b/shop/templates/footer.html
@@ -1,5 +1,5 @@
 {%load static%}
 
-<div class = "footer navbar-fixed-bottom my-footer mt-1 bg-dark">
+<div class = "footer navbar-fixed-bottom my-footer mt-1 mb-2 bg-dark">
     <p class = "text-center text-white">&copy; PC Depot 2022. All Rights Reserved.</p>
 </div>
