--- a/shop/templates/header.html
+++ b/shop/templates/header.html
@@ -2,8 +2,14 @@
 <header>
     <div style="text-align: start;" class="mb-2">
         <a href="{% url 'shop:all_products' %}">
-        <img src="{% static 'images/logo-no-background.png' %}" alt="Online PC Store"
-        id="logo"></a>
+        <img width="275" src="{% static 'images/logo-no-background.png' %}" alt="Online PC Store"
+        ></a>
+        <img width="150" height="70" class="ml-2" align="right" src="{% static 'images/AMD_Logo.png' %}" alt = "banner">
+        <img width="100" class="p-2" align="right" src="{% static 'images/Intel.png' %}" alt = "banner">
+        <img width="100" align="right" src="{% static 'images/Radeon.png' %}" alt = "banner">
+        <img width="200" align="right" src="{% static 'images/nvidia.png' %}" alt = "banner">
+        <img width="100" align="right" src="{% static 'images/Dell.png' %}" alt = "banner">
+        <img width="150" align="right" src="{% static 'images/corsair.jpg' %}" alt = "banner">
     </div>
 
 </header>
