--- a/shop/templates/shop/category.html
+++ b/shop/templates/shop/category.html
@@ -33,12 +33,13 @@
             <p class="text-justify">{{category.description}}</p>
         </div>
     {% else %}
-        <img class="my_image my_image_padding" src="{% static 'images/banner.jpg' %}" alt="Our Products Collection">
+        <img width="100" class="my_image my_image_padding" src="{% static 'images/banner.jpg' %}" alt="Our Products Collection">
+        <img width="100" length="100" align="right" class="my_image my_image_padding" src="{% static 'images/banner_fancy.png' %}" alt="Our Products Collection">
     </div>
     <br>
     <div>
             <h1 class="text-center my_title">Our PC Part Collection</h1>
-            <p class="text-justify">Are you looking to build your own Personal Computer and do not know where to purchase the best high-quality parts? You have come to the right place as we have a variety of products that are at an affordable price.</p>
+            <p class="text-justify">Are you looking to build your own Personal Computer and do not know where to purchase the best high-quality parts? You have come to the right place as we have a variety of products that are available at an affordable price.</p>
     </div>
     {% endif %}
         <div class="container">
