--- a/shop/templates/header.html
+++ b/shop/templates/header.html
@@ -10,6 +10,7 @@
         <img width="200" align="right" src="{% static 'images/nvidia.png' %}" alt = "banner">
         <img width="100" align="right" src="{% static 'images/Dell.png' %}" alt = "banner">
         <img width="150" align="right" src="{% static 'images/corsair.jpg' %}" alt = "banner">
+        <img width="150" align="right" src="{% static 'images/Razer-Logo.png' %}" alt = "banner">
     </div>
 
 </header>
