commit4 - small changes

--- a/order/templates/order/order_detail.html
+++ b/order/templates/order/order_detail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block title %}
-Order Details - PC Depot
+Order Details - PC Depot&copy
 {% endblock %}
 {% block content %}
 <div>
