--- a/order/templates/order/orders_list.html
+++ b/order/templates/order/orders_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block title %}
-    Order History - PC Depot
+    Order History - PC Depot&copy
 {% endblock %}
 {% block content %}
     <div>
