--- a/search_app/templates/search.html
+++ b/search_app/templates/search.html
@@ -4,7 +4,7 @@
     We have a variety of PC Parts that could fit your purpose. Search for the one you prefer!
 {% endblock %}
 {% block title %}
-    Search - PC Depot
+    Search - PC Depot&copy
 {% endblock %}
 {% block content %}
     <div>
