--- a/shop/templates/shop/category.html
+++ b/shop/templates/shop/category.html
@@ -11,7 +11,7 @@
     {% if category %}
         {{ category.name }} - PC Depot
     {% else %}
-        PC Depot 2022
+        PC Depot 2022&copy
     {% endif %}
 {% endblock %}
 {% block content %}
