--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -5,7 +5,7 @@
     Sign in and browse Ireland's largest PC Parts seller
 {% endblock %}
 {% block title %}
-    Login - PC Depot
+Login - PC Depot&copy
 {% endblock %}
 {% block content %}
     <div class="container">
