--- a/accounts/templates/registration/signup.html
+++ b/accounts/templates/registration/signup.html
@@ -5,7 +5,7 @@
 Sign up to get a new account with us. The Online PC store that has everything you need to build your dream PC!
 {% endblock %} 
 {% block title %} 
-Create a New Account - PC Depot
+Create a New Account - PC Depot&copy
 {% endblock %} 
 {% block content %}
 <div>
