--- a/order/templates/thanks.html
+++ b/order/templates/thanks.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block title %}
-    Thanks - PC Depot
+    Thanks - PC Depot&copy
 {% endblock %}
 {% block content %}
     <div>
