--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -16,7 +16,7 @@
     <meta name="description" content="{% block metadescription %}{% endblock %}">
     <title>{% block title %}{% endblock %}</title>
 </head>
-<body style="background-image: url('static/images/banner.webp');">
+<body style="background: url({%static 'images/banner.webp'%});">
     <div class="container bg-white">
         <div class="container-fluid mb-1 navbar-expand-lg navbar-nav my_top_navbar_div">
             {% include 'top-navbar.html' %}
