--- a/shop/templates/header.html
+++ b/shop/templates/header.html
@@ -1,8 +1,8 @@
 {% load static %}
 <header>
-    <div style="text-align: start;" class="mb-2">
+    <div style="text-align: start;">
         <a href="{% url 'shop:all_products' %}">
-        <img width="275" src="{% static 'images/logo-no-background.png' %}" alt="Online PC Store"
+        <img width="275" class="mb-2" src="{% static 'images/logo-no-background.png' %}" alt="Online PC Store"
         ></a>
         <img width="150" height="70" class="ml-2" align="right" src="{% static 'images/AMD_Logo.png' %}" alt = "banner">
         <img width="100" class="p-2" align="right" src="{% static 'images/Intel.png' %}" alt = "banner">
