--- a/shop/templates/shop/product.html
+++ b/shop/templates/shop/product.html
@@ -1,12 +1,11 @@
 {% extends "base.html" %}
 {% load static %}
 
-
 {% block metadescription %}
     {{ product.description|truncatewords:155 }}
 {% endblock %}
 {% block title %}
-    {{ product.name }} - PC Depot
+    {{ product.name }} - PC Depot&copy
 {% endblock %}
 {% block content %}
     <div class="row my_prod_row_class">
@@ -32,11 +31,12 @@
                         {% if product.stock == 0%}
                             <p class="text-justify my_prod_text text-danger"><b>Out of Stock</b></p>
                         {% else %}
-                            <a class="btn btn-secondary" href="{% url 'cart:add_cart' product.id %}">Add to Cart</a>
+                            <a class="btn btn-primary"  href="{% url 'cart:add_cart' product.id %}">Add to Cart <i class="fa-solid fa-cart-plus"></i></a>
                         {% endif %}
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
 {% endblock %}
