--- a/shop/templates/header.html
+++ b/shop/templates/header.html
@@ -11,6 +11,44 @@
         <img width="100" align="right" src="{% static 'images/Dell.png' %}" alt = "banner">
         <img width="150" align="right" src="{% static 'images/corsair.jpg' %}" alt = "banner">
         <img width="150" align="right" src="{% static 'images/Razer-Logo.png' %}" alt = "banner">
-    </div>
+
+    <!-- </div>
+    <div class="carousel-wrap">
+        <div class="owl-carousel">
+          <div class="item"><img width="150" height="70" src="{% static 'images/AMD_Logo.png' %}"></div>
+          <div class="item"><img width="100" class="p-2"  src="{% static 'images/Intel.png' %}"></div>
+          <div class="item"><img width="100"  src="{% static 'images/Radeon.png' %}"></div>
+          <div class="item"><img  width="200"  src="{% static 'images/nvidia.png' %}"></div>
+          <div class="item"><img  width="100" src="{% static 'images/Dell.png' %}"></div>
+          <div class="item"><img width="150"  src="{% static 'images/corsair.jpg' %}"></div>
+          <div class="item"><img width="150"  src="{% static 'images/Razer-Logo.png' %}"></div>
+        </div>
+      </div>
+
+      <script>
+            console.log
+                $('.owl-carousel').owlCarousel({
+                    loop: true,
+                    margin: 10,
+                    nav: true,
+                    navText: [
+                        "<i class='fa fa-caret-left'></i>",
+                        "<i class='fa fa-caret-right'></i>"
+                    ],
+                    autoplay: true,
+                    autoplayHoverPause: true,
+                    responsive: {
+                        0: {
+                            items: 1
+                        },
+                        600: {
+                            items: 3
+                        },
+                        1000: {
+                            items: 5
+                        }
+                    }
+                    })
+      </script> -->
 
 </header>
