--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -15,6 +15,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Coiny&display=swap" rel="stylesheet">
     <meta name="description" content="{% block metadescription %}{% endblock %}">
     <title>{% block title %}{% endblock %}</title>
+    <!-- put jquery before owl carousel -->
+<!-- jquery -->
+<!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script> -->
+
+<!-- owl carousel -->
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
 </head>
 <body style="background: url({%static 'images/banner.webp'%});">
     <div class="container bg-white">
