commit 8 - password resets added

--- a/shop/templates/shop/product.html
+++ b/shop/templates/shop/product.html
@@ -46,7 +46,7 @@
     
     
                     {%if request.user.is_authenticated %}
-                    <h5>Leave a review of {{product.name}}.</h5>
+                    <h5>Leave a review of <strong>{{product.name}}.</strong></h5>
                     <br>
                     <form method="POST" action=".">
                         {%csrf_token%}
@@ -60,6 +60,7 @@
                                 <option value="4">4</option>
                                 <option value="5">5</option>
                             </select>
+                            <i class="fas fa-star text-warning"></i>
                         </div>
                     <br>
                         <div class="form-group">
@@ -80,22 +81,23 @@
                     {%endif%}
                     
                     {% for review in product.reviews.all %}
-                        <div class="px-4 py-6">
+                        <div class="px-4 py-6  bg-secondary rounded">
                             <strong>Review by:</strong>
                             {{ review.user}}
                             <br>
-                            <strong>Rating:</strong> {{review.rating}}/5
-                            <br>
-                            <strong>Title: </strong>{{review.title}}
+                            <strong>Rating:</strong> {{review.rating}}/5<i class="fas fa-star text-warning"></i>
                             <br>
                             <br>
-                            <strong>Comment:</strong><br>
+                            <strong>{{review.title}}</strong>
+                            <br>
+                            <br>
                             {{ review.content }}
                             <br>
                             <br>
-                            <div class="bg-dark"></div>>
+                            <hr>
                         </div>
-
+                        <br>
+                        <br>
                     {% endfor %}
                 </div>
             </div>
