--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -29,6 +29,7 @@ Login - PC Depot&copy
                         <button type="submit" class="btn btn-secondary">Login</button>
                     </form>
                     <br>
+                    <a class="btn btn-secondary" href="{%url 'password_reset'%}">Forgot your password?</a>
                 </div>
                 
             </div>
