--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -35,10 +35,13 @@
         {% block content %}
         {% include 'slider.html' %}
         {% endblock %}
+
+        {% include 'contactus.html' %}
         
         {% include 'footer.html' %}
     </div>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
 </body>
 </html>
