--- a/staticfiles/css/custom.css
+++ b/staticfiles/css/custom.css
@@ -166,44 +166,6 @@
 	font-size: 12px;
 }
 
-.carousel-wrap {
-	margin: 90px auto;
-	padding: 0 5%;
-	width: 80%;
-	position: relative;
-  }
-  
-  /* fix blank or flashing items on carousel */
-  .owl-carousel .item {
-	position: relative;
-	z-index: 100; 
-	-webkit-backface-visibility: hidden; 
-  }
-  
-  /* end fix */
-  .owl-nav > div {
-	margin-top: -26px;
-	position: absolute;
-	top: 50%;
-	color: #cdcbcd;
-  }
-  
-  .owl-nav i {
-	font-size: 52px;
-  }
-  
-  .owl-nav .owl-prev {
-	left: -30px;
-  }
-  
-  .owl-nav .owl-next {
-	right: -30px;
-  }
-
-/* .item img{
-	width: 100px;
-} */
-
 /* hide rating radio button */
 
 .rate > input{
@@ -266,3 +228,11 @@
 	height: 80px;
 	border: 1px solid grey;
   }
+
+
+.contact{
+	background: #000;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
