final commit - small bugfixes

--- a/shop/templates/contactus.html
+++ b/shop/templates/contactus.html
@@ -8,7 +8,7 @@
     color: #fff;
 }
 .contact {
-  background: #000;
+  background: #282828;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -99,11 +99,12 @@
 <script src="https://kit.fontawesome.com/e4cf8c1779.js" crossorigin="anonymous"></script>
 </head>
 <body>
-
+<br>
     <section class="contact" id="contact">
         <div class="title" >
+            <br>
             <h3>Contact Us.</h3>
-            <p>If you may have any questions about our productcs. You can contact us via Contact Us form down bellow. </p>
+            <p>If you may have any questions about our products. You can contact us via Contact Us form down below. </p>
         </div>
         <div class="contactForm">
             <div class="row">
@@ -129,10 +130,8 @@
             </div>
             <div class="row">
                 <div class="col100">
-                    <!-- <form method="post" action="xzad66@gmail.com" >
-                        <input type="submit" value="Send Email" /> 
-                    </form> -->
                     <input type="submit" value="Send" onclick="alert('Demo only, submit not available.')" > 
+                    <br>
                 </div>
             </div>
         </div>
